--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -34,7 +34,7 @@ body {
   transition: all 200ms;
 }
 
-#Animales div >div:hover {
+#Animales div>div:hover {
   box-shadow: 0px 1px 5px 1px;
 }
 
@@ -44,7 +44,10 @@ body {
 
 /* Modal */
 
-.modal-dialog{
-    max-width: 85% !important;
+.modal-dialog {
+  max-width: 85% !important;
 }
 
+.texto-blanco {
+  color: white;
+}
